test/classes/ferguson/generic-inherit-record4.good
generic-inherit-record4.chpl:13: error: inheritance is not currently supported for records
generic-inherit-record4.chpl:13: note: Child declared as a record here
